WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276577
Some AX context menu invocations insert unprintable characters instead of showing a context menu
https://bugs.webkit.org/show_bug.cgi?id=276577
Summary
Some AX context menu invocations insert unprintable characters instead of sho...
Tim Horton
Reported
2024-07-13 13:49:38 PDT
Some AX context menu invocations insert unprintable characters instead of showing a context menu
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2024-07-13 13:49:45 PDT
<
rdar://problem/130975787
>
Tim Horton
Comment 2
2024-07-13 13:51:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30788
EWS
Comment 3
2024-07-13 13:58:16 PDT
Committed
280944@main
(658141c4771d): <
https://commits.webkit.org/280944@main
> Reviewed commits have been landed. Closing PR #30788 and removing active labels.
EWS
Comment 4
2024-07-17 07:56:27 PDT
Committed
280938.13@integration/ci/130975787_658141c477_safari-7619-branch
(e7bb4e0660ae): <
https://commits.webkit.org/280938.13@integration/ci/130975787_658141c477_safari-7619-branch
> Reviewed commits have been landed. Closing PR #1369 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug