Cherry-pick 658141c4771d. rdar://130975787

Some AX context menu invocations insert unprintable characters instead of showing a context menu
    https://bugs.webkit.org/show_bug.cgi?id=276577
    rdar://130975787

    Reviewed by Richard Robinson.

    * Source/WebKit/UIProcess/API/mac/WKWebViewMac.mm:
    (-[WKWebView showContextMenuForSelection:]):
    Provide an empty implementation of this method, which causes AppKit to call this
    method instead of insertText when certain accessibility context menu paths are invoked.

    A future patch will provide a proper implementation; this just stops us from
    inserting a random control character.

    Canonical link: https://commits.webkit.org/280944@main

Canonical link: https://commits.webkit.org/280938.13@integration/ci/130975787_658141c477_safari-7619-branch